--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -729,7 +729,7 @@ strong {
   #comoFunciona .item-1 .title, #comoFunciona .item-2 .title, #comoFunciona .item-3 .title, #comoFunciona .item-4 .title, #comoFunciona .item-5 .title, #comoFunciona .item-6 .title, #comoFunciona .item-7 .title, #comoFunciona .item-8 .title {
     font-style: normal;
     font-weight: 800;
-    font-size: 31px;
+    font-size: 25px;
     line-height: 42px;
     margin-bottom: 15px;
   }
@@ -775,7 +775,7 @@ strong {
     width: 100%;
   }
   #comoFunciona .item-6 {
-    left: 61.94%;
+    left: 55.94%;
     right: 33.28%;
     top: 69.1%;
     bottom: 69.65%;
@@ -1453,4 +1453,25 @@ footer.footer .footer-button span {
     align-self: center;
     font-size: 12px;
   }
+}
+
+/* Boton volver arriva */
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color:#1d2766;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 50%;
+}
+
+#myBtn:hover {
+  background-color: #555;
 }
